// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnmountField $errorsInline after submit > removed > submit 1`] = `
{
  "fields.0.value": "Field is required",
}
`;

exports[`UnmountField $errorsInline after submit > removed 1`] = `
{
  "fields.0.value": "Field is required",
}
`;

exports[`UnmountField $form after submit and removed 1`] = `
{
  "hasError": true,
  "hasOuterError": false,
  "submitted": true,
}
`;

exports[`UnmountField $values after change 1,2 > removed 1`] = `
{
  "fields": [
    {
      "id": 2,
      "value": "value 2",
    },
  ],
}
`;

exports[`UnmountField $values after removed > onChange("test") 1`] = `
{
  "fields": [
    {
      "id": 2,
      "value": "test",
    },
  ],
}
`;

exports[`UnmountField render fields 1`] = `
[
  <input
    class="input"
    name="fields.0.value"
    placeholder="value № 0"
    role="textbox"
    value=""
  />,
  <input
    class="input"
    name="fields.1.value"
    placeholder="value № 1"
    role="textbox"
    value=""
  />,
]
`;

exports[`UnmountField render fields after removed 1`] = `
[
  <input
    class="input"
    name="fields.0.value"
    placeholder="value № 0"
    role="textbox"
    value=""
  />,
]
`;

exports[`UnmountField render fields after submit and removed 1`] = `
[
  <div
    class="input-wrap"
    role="wrapper-for-input"
  >
    <label>
      value № 0
    </label>
    <input
      class="input"
      name="fields.0.value"
      placeholder="value № 0"
      role="textbox"
      value=""
    />
    <span>
      Field is required
    </span>
  </div>,
]
`;
